[package]
name = "charter"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Simple and attractive star charts"
repository = "https://github.com/willbarton/charter"

[dependencies]
anyhow = "1.0.99"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
phf = { version = "0.11", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1.2"
svg = "0.18.0"
